--- a/ex08/ex08-1.html
+++ b/ex08/ex08-1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>課題08−1</title>
+    <title>Document</title>
     <!--    <link rel="stylesheet" href="">-->
 </head>
 
